# locpy

./: .buildinfo  README.md  api-reference.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api-reference.doctree  environment.pickle  getting-started.doctree  index.doctree
.github/workflows/: documentation.yml  run-tests.yml
_sources/: api-reference.rst.txt
docs/source/: conf.py  getting-started.rst  index.rst
src/locpy/: api.py
tests/: api.py  test_api.py
